--- a/arch/arm/configs/imperticus_defconfig
+++ b/arch/arm/configs/imperticus_defconfig
@@ -1656,7 +1656,7 @@ CONFIG_USB_ANDROID_ACM=y
 CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 # CONFIG_USB_ANDROID_MTP is not set
-# CONFIG_USB_ANDROID_RNDIS is not set
+CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_USB_ANDROID_ACCESSORY=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
