--- a/drivers/star/Makefile
+++ b/drivers/star/Makefile
@@ -10,7 +10,18 @@ obj-y				+= lg_panel_gpio_set.o
 #20101119, , Camera Flash fast init
 obj-y				+= tegra_user_gpio.o
 #20101119, , Camera Flash fast init
+#obj-$(CONFIG_STAR_BATTERY_CHARGER)	+= star_battery_charger.o
+
+ifeq ($(CONFIG_USE_DS_BATTERY_DRIVER),y)
+obj-$(CONFIG_STAR_BATTERY_CHARGER) += star_battery_charger_ds.o
+else
+ifeq ($(CONFIG_USE_LITE_BATTERY_DRIVER),y)
+obj-$(CONFIG_STAR_BATTERY_CHARGER) += star_battery_charger_lite.o
+else
 obj-$(CONFIG_STAR_BATTERY_CHARGER)	+= star_battery_charger.o
+endif
+endif
+
 obj-$(CONFIG_STAR_MUIC_TI)	+= star_muic_TI.o
 obj-$(CONFIG_STAR_MUIC)	+= star_muic.o
 obj-$(CONFIG_STAR_PROXIMITY)	+= star_proximity.o
@@ -36,6 +47,9 @@ obj-$(CONFIG_RINETWORK_DRIVER) += rindrv.o
 obj-$(CONFIG_LOGGER)		+= logger.o
 
 obj-$(CONFIG_STAR_WM8994_TEST)	+= star_wm8994.o
+
+# Voodoo Sound
+obj-$(CONFIG_STAR_WM8994_VOODOO)	+= star_wm8994_voodoo.o
 
 #20100827, 
 obj-$(CONFIG_STAR_GYRO_ACCEL)	+= sensor/
