--- a/drivers/star/Kconfig
+++ b/drivers/star/Kconfig
@@ -2,6 +2,20 @@
 
 menu "LGE STAR device driver"
 
+config USE_DS_BATTERY_DRIVER
+	bool "Star Battery Driver Select"
+	default n
+	depends on MACH_STAR
+	help
+	 Select Battery Driver type
+	
+config USE_LITE_BATTERY_DRIVER
+ 	bool "Star Battery Driver Lite Version"
+ 	default n
+ 	depends on MACH_STAR && !USE_DS_BATTERY_DRIVER
+ 	help
+ 	 Select Battery Driver type
+
 config STAR_BATTERY_CHARGER
 	bool "Star Battery & Charger Driver"
 	default y
