--- a/arch/arm/configs/imperticus_defconfig
+++ b/arch/arm/configs/imperticus_defconfig
@@ -319,6 +319,15 @@ CONFIG_MACH_STAR_REV_F=y
 # CONFIG_STAR_PMIC is not set
 # CONFIG_STAR_HIDDEN_RESET is not set
 # CONFIG_LPRINTK is not set
+CONFIG_FAKE_SHMOO=y
+CONFIG_MAX_CPU_OC_FREQ=1500000
+CONFIG_MAX_CPU_OC_VOLT=1325
+CONFIG_BOOST_PERIPHERALS=y
+CONFIG_MAX_AVP_OC_FREQ=280000
+CONFIG_MAX_GPU_OC_FREQ=350000
+CONFIG_MAX_DDR_OC_FREQ=350000
+CONFIG_DDR2_SDRAM_FREQ=350000
+CONFIG_EMC_CORE_VOLT=1150
 
 #
 # LGE STAR device driver
